--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.6",
-        "zendframework/zend-diactoros": "^1.1.3"
+        "phpunit/phpunit": "^4.8.6"
     },
     "autoload": {
         "psr-4": {
